prevent scrollbars

--- a/src/style.css
+++ b/src/style.css
@@ -951,7 +951,7 @@ i.spinner {
     margin-top: 2%;
     margin-left: 2%;
     width: 95%;
-    height: 90%;
+    height: 85%;
     clear: both;
 }
 #tab-inputs, #tab-results {
